Edited Playbooks for Accuracy

--- a/Ansible/Filebeat-playbook.yml
+++ b/Ansible/Filebeat-playbook.yml
@@ -1,4 +1,3 @@
-
 ---
 - name: installing and launching filebeat
   hosts: webservers
@@ -13,8 +12,8 @@
 
   - name: drop in filebeat.yml
     copy:
-      src: /etc/ansible/filebeat-config.yml
-      dest: /etc/filebeat/
+      src: /etc/filebeat/filebeat-config.yml
+      dest: /etc/filebeat/filebeat.yml
 
   - name: enable and configure system module
     command: sudo filebeat modules enable system
@@ -23,18 +22,11 @@
     command: sudo filebeat setup
 
   - name: start filebeat service
-    command: sudo service filebeat setup
-
-  - name: enable service filebeat on boot
-    systemd:
-      name: enable http
-      enabled: yes
+    command: sudo service filebeat start
 
   - name: Increase virtual memory
     command: sysctl -w vm.max_map_count=262144
 
-  - name: Increase virtual memory on restart
-    shell: echo "vm.max_map_count=262144" >> etc/sysctl.conf
 
 
 
