--- a/Ansible/metricbeat-playbook.yml
+++ b/Ansible/metricbeat-playbook.yml
@@ -1,20 +1,19 @@
 ---
 - name: installing and launching metricbeat
-  hosts:
+  hosts: webservers
   become: yes
   tasks:
 
   - name: download metricbeat deb
     command: curl -L -O https://artifacts.elastic.co/downloads/beats/metricbeat/metricbeat-7.6.1-amd64.deb
-sudo dpkg -i metricbeat-7.6.1-amd64.deb
 
   - name: install metricbeat deb
     command: sudo dpkg -i metricbeat-7.6.1-amd64.deb
 
   - name: drop in metricbeat.yml
     copy:
-      src: /etc/ansible/files/metricbeat-config.yml
-      dest: /etc/ansible/metricbeat/
+      src: /etc/metricbeat/metricbeat-config.yml
+      dest: /etc/metricbeat/metricbeat.yml
 
   - name: enable and configure system module
     command: sudo metricbeat modules enable kibana
@@ -25,13 +24,5 @@ sudo dpkg -i metricbeat-7.6.1-amd64.deb
   - name: start metricbeat service
     command: sudo service metricbeat start
 
-  - name: enable service filebeat on boot
-    systemd:
-      name: enable http
-      enabled: yes
-
   - name: Increase virtual memory
     command: sysctl -w vm.max_map_count=262144
-
-  - name: Increase virutal memory on restart
-    shell: echo "vm.max_map_count=262144" >> /etc/sysctl.conf
